feat: Implementing get all devices from Tuya IoT platform